<resources>
    <string name="app_name">随行</string>
    <string name="example_name">请登录</string>
    <string name="example_motto"></string>
    <string name="vehicle_information">车辆信息</string>
    <string name="add_gas">导航</string>
    <string name="music">音乐</string>
    <string name="peccany">交通违法信息</string>
    <string name="about_us">关于我们</string>
    <string name="back">退出</string>
    <string name="toolbar_text_example">主页</string>
    <string name="example_location_city">重庆</string>
    <string name="add_vehicle_information">添加车辆信息</string>
    <string name="peccay_text">违章信息查询</string>
    <string name="sample_text"></string>
    <string name="limit_code">0123456789abcdefghigjklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@()%&amp;*#/~?!:;\'-_,."+-$^&amp;</string>
    <string name="limit_phone">+0123456789*#</string>
    <string name="auth_code">0123456789</string>
    <string name="vehicle_num">渝B741000</string>
    <string name="example_location"></string>
    <string name="input_num">请输入你的车牌号</string>
    <string name="input_frame">请输入车架号</string>
    <string name="input_engine">请输入引擎号</string>
    <string name="navigation">导航</string>
    <string name="start">起点</string>
    <string name="target">终点</string>
    <string name="begin_query_route">开始查询</string>
    <string name="cancel">取消</string>

</resources>
