<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_background"
    android:orientation="vertical">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/et_start"
            android:singleLine="true"
            android:hint="@string/start"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="80dp"
        android:layout_height="80dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/et_target"
            android:singleLine="true"
            android:hint="@string/target"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_marginTop="160dp"
        android:layout_gravity="right"
        android:textSize="18sp"
        android:id="@+id/tv_query"
        android:layout_marginBottom="12dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/add_vehicle_frame_color"
        android:text="@string/begin_query_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="160dp"
        android:layout_gravity="right"
        android:id="@+id/tv_cancel"
        android:textSize="18sp"
        android:layout_marginBottom="12dp"
        android:layout_marginRight="120dp"
        android:textColor="@color/black"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</android.support.v7.widget.CardView>
