<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_drawer_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="#4EA2F8"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_me"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="53dp"
        android:background="?android:attr/selectableItemBackground"
        android:paddingLeft="32dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_head"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/no_head" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dl_tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_name"
                android:textColor="#ffffff"
                android:textSize="@dimen/drawer_layout_name" />

            <TextView
                android:id="@+id/tv_motto"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/example_motto"
                android:textColor="#ffffff"
                android:textSize="@dimen/drawer_layout_motto" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="18dp"
        android:paddingLeft="32dp"
        android:src="@mipmap/dl_blue_line" />

    <LinearLayout
        android:id="@+id/ll_vehicle_information"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingLeft="32dp">


        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@mipmap/dl_vehicle_information" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/vehicle_information"
            android:textColor="#ffffff"
            android:textSize="@dimen/drawer_layout_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_get_gas"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingLeft="32dp">


        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@mipmap/dl_get_gas" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/add_gas"
            android:textColor="#ffffff"
            android:textSize="@dimen/drawer_layout_text_size" />


    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:id="@+id/ll_navigation"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="54dp"-->
        <!--android:background="?android:attr/selectableItemBackground"-->
        <!--android:gravity="center_vertical"-->
        <!--android:paddingLeft="32dp">-->


        <!--<ImageView-->
            <!--android:layout_width="26dp"-->
            <!--android:layout_height="26dp"-->
            <!--android:src="@mipmap/dl_navigation" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="25dp"-->
            <!--android:text="@string/navigation"-->
            <!--android:textColor="#ffffff"-->
            <!--android:textSize="@dimen/drawer_layout_text_size" />-->

    <!--</LinearLayout>-->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="15dp"
        android:paddingLeft="32dp"
        android:src="@mipmap/dl_blue_line" />

    <LinearLayout
        android:id="@+id/ll_peccany"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingLeft="32dp">


        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@mipmap/dl_peccany" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/peccany"
            android:textColor="#ffffff"
            android:textSize="@dimen/drawer_layout_text_size" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:paddingLeft="32dp"
        android:src="@mipmap/dl_blue_line" />

    <LinearLayout
        android:id="@+id/ll_about_us"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingLeft="32dp">


        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@mipmap/dl_about_us" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/about_us"
            android:textColor="#ffffff"
            android:textSize="@dimen/drawer_layout_text_size" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_back"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingLeft="32dp">


        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@mipmap/dl_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/back"
            android:textColor="#ffffff"
            android:textSize="@dimen/drawer_layout_text_size" />

    </LinearLayout>
</LinearLayout>
