<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/login_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/toolbar_background"
        android:orientation="vertical">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/username_frame_height"
            android:layout_marginLeft="@dimen/frame_margin"
            android:layout_marginRight="@dimen/frame_margin"
            android:layout_marginTop="48dp"
            android:background="@mipmap/username_frame"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:src="@mipmap/tel" />

            <EditText
                android:id="@+id/et_tel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/tv_send_authcode"
                android:layout_toStartOf="@+id/tv_send_authcode"
                android:layout_marginLeft="64dp"
                android:background="@null"
                android:digits="@string/limit_phone"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:nextFocusForward="@+id/et_authcode"
                android:singleLine="true"
                android:text="@string/sample_text"
                android:textColor="@color/login_blue_color"
                android:textSize="@dimen/login_frame_textsize" />

            <TextView
                android:id="@+id/tv_send_authcode"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/send_authcode"
                android:gravity="center"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="发送验证码"
                android:textColor="@color/vehicle_information_choose_vehicle_text_color"
                android:textSize="@dimen/login_frame_textsize" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/username_frame_height"
            android:layout_marginLeft="@dimen/frame_margin"
            android:layout_marginRight="@dimen/frame_margin"
            android:layout_marginTop="24dp"
            android:background="@mipmap/username_frame"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="16dp"
                android:src="@mipmap/auth_code" />

            <EditText
                android:id="@+id/et_authcode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="28dp"
                android:background="@null"
                android:digits="@string/auth_code"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:nextFocusForward="@+id/et_password1"
                android:singleLine="true"
                android:text="@string/sample_text"
                android:textColor="@color/login_blue_color"
                android:textSize="@dimen/login_frame_textsize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/username_frame_height"
            android:layout_marginLeft="@dimen/frame_margin"
            android:layout_marginRight="@dimen/frame_margin"
            android:layout_marginTop="24dp"
            android:background="@mipmap/username_frame"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="16dp"
                android:src="@mipmap/new_password" />

            <EditText
                android:id="@+id/et_password1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="28dp"
                android:background="@null"
                android:digits="@string/limit_code"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:nextFocusForward="@+id/et_password2"
                android:singleLine="true"
                android:text="@string/sample_text"
                android:textColor="@color/login_blue_color"
                android:textSize="@dimen/login_frame_textsize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/username_frame_height"
            android:layout_marginLeft="@dimen/frame_margin"
            android:layout_marginRight="@dimen/frame_margin"
            android:layout_marginTop="24dp"
            android:background="@mipmap/username_frame"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="16dp"
                android:src="@mipmap/password_again" />

            <EditText
                android:id="@+id/et_password2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="28dp"
                android:background="@null"
                android:digits="@string/limit_code"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text="@string/sample_text"
                android:textColor="@color/login_blue_color"
                android:textSize="@dimen/login_frame_textsize" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:layout_marginTop="48dp">

            <TextView
                android:id="@+id/tv_nosame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/frame_margin"
                android:text="两次输入密码不一致!"
                android:textColor="#FE0000"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:background="@mipmap/login_background"
                android:gravity="center_horizontal"
                android:paddingTop="8dp"
                android:text="确认修改密码"
                android:textColor="@color/vehicle_information_choose_vehicle_text_color"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
